<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    tools:context=".presentation.ui.forgotPassword.ChangePasswordSuccess">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imageDescription" />
    <TextView
        android:id="@+id/tvTitleForgotSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pjs_semibold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        android:text="@string/title_success_change_pass"
        />
    <TextView
        android:id="@+id/tvSubtitleForgotSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pjs_regular"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/neutral_500"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/subtitle_success_change_pass"
        app:layout_constraintTop_toBottomOf="@id/tvTitleForgotSuccess" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrimaryButton"
        style="@style/ButtonStyle"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>