<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.signup.SignUpContactFragment"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvContactDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pjs_semibold"
        android:text="@string/contact_detail"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pjs_regular"
        android:text="@string/provide_us_with_your_most_recent_contact_information"
        android:textColor="@color/neutral_500"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvContactDetail" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pjs_medium"
        android:text="@string/phone_number"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvContactDetail"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtFirstMiddleName"
        style="@style/TextInput"
        android:layout_marginTop="6dp"
        app:boxStrokeErrorColor="@color/danger_500"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFirstMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pjs_regular"
            android:hint="@string/phone_number"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pjs_medium"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvContactDetail"
        app:layout_constraintTop_toBottomOf="@id/edtFirstMiddleName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmail"
        style="@style/TextInput"
        android:layout_marginTop="6dp"
        app:boxStrokeErrorColor="@color/danger_500"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pjs_regular"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/ButtonStyle"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvContactDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>