<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    tools:context=".presentation.ui.auth.forgotPassword.VerifyForgotPassword">
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imageDescription" />
    <TextView
        android:id="@+id/tvTitleVerifyForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pjs_semibold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        android:text="@string/title_verify_mail"
        />
    <TextView
        android:id="@+id/tvSubtitleVerifyForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pjs_regular"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/neutral_500"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/subtitle_verify_mail"
        app:layout_constraintTop_toBottomOf="@id/tvTitleVerifyForgot" />

    <TextView
        android:id="@+id/tvCountdownVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pjs_semibold"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/primary_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitleVerifyForgot"
        tools:text="00:59"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenEmail"
        style="@style/ButtonStyle"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cta_send_instruction"
        app:layout_constraintBottom_toTopOf="@+id/btnResendVerification"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResendVerification"
        style="@style/SecondaryButton"
        android:text="@string/cta_send_instruction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>